# gdex-docs-dsupdt

./: .gitignore  README.rst  pyproject.toml  requirements.txt
.github/workflows/: convert-dsupdt-usg.yml
docs/: requirements.txt
docs/source/: .section2.rst.swp  api.rst  appendixA.rst  conf.py  index.rst  section1.rst  section2.1.rst  section2.2.rst  section2.3.rst  section2.4.rst  section2.rst  section3.1.1.rst  section3.1.2.rst  section3.1.3.rst  section3.1.4.rst  section3.1.5.rst  section3.1.6.rst  section3.1.7.rst  section3.1.rst  section3.2.1.rst  section3.2.2.rst  section3.2.rst  section3.3.1.rst  section3.3.2.rst  section3.3.3.rst  section3.3.4.rst  section3.3.5.rst  section3.3.6.rst  section3.3.7.rst  section3.3.8.rst  section3.3.rst  section3.rst  section4.rst  section5.1.rst  section5.2.rst  section5.rst  usage.rst
